# inf_qwq

./: .gitignore  CMakeLists.txt  README.md  api_emulator.py  build.sh  db_create.md  hk_stream.py  hk_test_demo.cpp  pack.sh  pack_ubuntu.sh  start_rtsp_batch_stream.sh  tags  translations.qrc.in  短信发送接口.md
.config/: settings.json
cmake/: DownloadONNXRuntime.cmake  Downloadonnxruntime.cmake  FindCUDNN.cmake  FindONNXRuntime.cmake  FindTensorRT.cmake  Findhkvision.cmake  Findonnxruntime.cmake
include/components/: actions_wrapper.h  camera_config_wrapper.h  camera_wrapper.h  camera_wrapper_ffmpeg.h  cropped_img_wrapper.h  cropped_wrapper.h  draw_layer.h  draw_overlay.h  grouping_rtsp_stream.h  grouping_sidebar.h  status_bar.h  tool_bar.h
include/utils/: chars_ort_inferer.h  common.h  common_tools.hpp  db_manager.h  db_manager_mini.h  http_server.h  images_process.h  ort.txt  ort_inf.h  ort_inf.hpp  trt_inf.hpp  video_capturer.h  yolo_det.h
include/windows/: db_config_window.h  expanded_camera_window.h  http_alarm_window.h  keywords_edit_window.h  mainwindow.h  rtsp_config_window.h  settings_window.h  stream_settings_window.h  warning_records_window.h
inf_src/classes/: nums.txt
inf_src/onnx/chars/: onnx_model_info.txt
src/: CMakeLists.txt  main.cpp  test.cpp  tmp.md
src/components/: CMakeLists.txt  actions_wrapper.cpp  camera_config_wrapper.cpp  camera_wrapper.cpp  camera_wrapper_ffmpeg.cpp  cropped_img_wrapper.cpp  cropped_wrapper.cpp  draw_overlay.cpp  grouping_rtsp_stream.cpp  grouping_sidebar.cpp  status_bar.cpp  tool_bar.cpp
src/utils/: CMakeLists.txt  chars_ort_inferer.cpp  db_manager.cpp  db_manager_mini.cpp  db_tables.md  http_server.cpp  images_process.cpp  ort_inf.cpp  video_capturer.cpp
src/windows/: 2DO_config_window_button.md  CMakeLists.txt  db_config_window.cpp  expanded_camera_window.cpp  http_alarm_window.cpp  keywords_edit_window.cpp  mainwindow.cpp  rtsp_config_window.cpp  settings_window.cpp  stream_settings_window.cpp  warning_records.cpp
